<resources>
    <string name="app_name">-</string>
    <string name="bt_tap_to_experience">Tap to Experience</string>
    <string name="bt_tap_compare">การเปรียบเทียบ</string>
    <string name="bt_tap_experience">ทดสอบ</string>
    <string name="bt_tap_more">เพิ่มเติม</string>
    <string name="bt_tap_step">ขั้นตอน</string>
    <string name="bt_tap_back">Back</string>
    <string name="bt_tap_camera">ทดสอบ</string>
    <string name="bt_tap_other">Other</string>
    <string name="bt_tap_on">เปิด</string>
    <string name="bt_tap_off">ปิด</string>
    <string name="bt_tap_oppo">Gaudi</string>
    <string name="bt_tap_view_more">点击查看更多机型对比</string>
    <string name="bt_tap_view_more_back">返回查看本机参数</string>
    <string name="main_selling_point1">Performance</string>
    <string name="main_selling_point2">Design</string>
    <string name="main_selling_point3">Video</string>
    <string name="main_selling_point4">ColorOS 7.2</string>
    <string name="main_selling_point5">IOT</string>
    <string name="home_menu_title">Specs</string>
    <string name="secondary_selling_point1">Smart Spying Prevention</string>
    <string name="secondary_selling_point2">Smart AirControl</string>
    <string name="secondary_selling_point3">Snapdragon 720G</string>
    <string name="secondary_selling_point4">30W VOOC Flash Charge 4.0</string>
    <string name="secondary_selling_point5">8GB+128GB</string>
    <string name="secondary_selling_point6">Dual Punch-hole Display</string>
    <string name="secondary_selling_point7">Ultra Slim Body</string>
    <string name="secondary_selling_point8">Trendy Colors</string>
    <string name="secondary_selling_point9">AI Color Portrait</string>
    <string name="secondary_selling_point10">960fps AI Slow-motion</string>
    <string name="secondary_selling_point11">Ultra Steady Video 3.0</string>
    <string name="secondary_selling_point12">Night Flare Portrait</string>
    <string name="secondary_selling_point13">More Photograph</string>
    <string name="secondary_selling_point14">Super Power Saving Mode</string>
    <string name="secondary_selling_point15">Quick Return Bubble</string>
    <string name="secondary_selling_point16">Decision Spinner</string>
    <string name="secondary_selling_point17">OPPO Watch</string>
    <string name="secondary_selling_point18">OPPO Enco W51</string>
    <string name="string_null"></string>
    <string name="parameter_color1">Galactic Blue</string>
    <string name="parameter_color2">Space Black</string>
    <string name="parameter_title1">Rear Camera: </string>
    <string name="parameter_content1">48MP &amp; 8MP &amp; 2MP &amp; 2MP</string>
    <string name="parameter_title2">Front Camera: </string>
    <string name="parameter_content2">32MP &amp; AI-Enhanced Smart Sensor</string>
    <string name="parameter_title3">Processor:</string>
    <string name="parameter_content3">Snapdragon 720G</string>
    <string name="parameter_title4">Battery:</string>
    <string name="parameter_content4">4015mAh\n30W VOOC Flash Charge 4.0</string>
    <string name="parameter_title5">Weight:</string>
    <string name="parameter_content5">165g</string>
    <string name="parameter_title6">Memory:</string>
    <string name="parameter_content6">8GB+128GB</string>
    <string name="parameter_title7">System:</string>
    <string name="parameter_content7">ColorOS 7.2\n(based on Android 10)</string>
    <string name="parameter_title8"></string>
    <string name="parameter_content8"></string>
    <string name="parameter_remake">Disclaimer:</string>
    <string name="parameter_remake_content">
    \n* ปัจจุบันนี้ Smart AirControl scrolling  ใช้ได้กับ Facebook Instagram Tiktok และ YouTube เท่านั้น Smart AirControl call ตอบรับการโทรด้วยเสียงเท่านั้นและไม่สามารถใช้ได้กับการโทรด้วยวิดีโอหรือแอปการโทรฝ่ายที่สาม ผู้ใช้สามารถเปิดใช้งานคุณสมบัตินี้ได้โดยเข้าไปที่ การตั้งค่า->เครื่องมืออำนวยความสะดวก->ท่าทาง &amp; การเคลื่อนไหว->Air Gestures
\n* ตามที่วัดจากการทดสอบที่ดำเนินการโดย OPPO การชาร์จ -  จาก 1% ถึง 50%ใช้เวลาไม่เกิน 20 นาที
\n* ขนาดหน้าจอวัดตามแนวทแยงมุมเป็นเซนติเมตร ขนาดหน้าจอ 6.4 นิ้ว (ประมาณ 16.3 ซม.) เป็นรูปสี่เหลี่ยมผืนผ้าแบบเต็มและอัตราส่วนหน้าจอ 90.7% (พื้นที่ใช้งาน) พื้นที่ที่ดูได้จริงนั้นจะน้อยกว่า เนื่องจากมุมมนและรูกล้อง
\n* วิดีโอสโลว์โมชันของ - นั้นถ่ายได้ที่ 240 fps และใช้อัลกอริธึมการใส่เฟรมเพื่อสร้างเฟรมเรทที่ 960 fps
\n* Quick Return Bubble ของ - สนับสนุน PUBG Mobile, PUBG Lite, Mobile Legends และ AOV (ไม่รองรับในอินเดีย) ภูมิภาคที่รองรับ: อินเดีย อินโดนีเซีย เวียดนาม และ ไทย
\n* Product pictures are for reference only. Certain product specifications and descriptions may change for reasons including but not limited to changes in suppliers. Please refer to the actual product for all criteria.  รูปภาพผลิตภัณฑ์ใช้สำหรับการอ้างอิงเท่านั้น ข้อมูลและรายละเอียดของผลิตภัณฑ์บางอย่างอาจมีการเปลี่ยนแปลงด้วยเหตุผลซึ่งรวมถึง แต่ไม่จำกัดเฉพาะการเปลี่ยนแปลงในซัพพลายเออร์ โปรดดูผลิตภัณฑ์จริงสำหรับเกณฑ์ทั้งหมด
\n* ข้อมูลในการอธิบายผลิตภัณฑ์นี้มาจากพารามิเตอร์ทางเทคนิคของ OPPO  รวมถึงข้อมูลการทดสอบในห้องปฏิบัติการและผู้จำหน่าย ข้อมูลจำเพาะของผลิตภัณฑ์จริงอาจแตกต่างกันเล็กน้อย ซึ่งขึ้นอยู่กับเวอร์ชันของซอฟต์แวร์ สภาพแวดล้อมการทดสอบเฉพาะ และเวอร์ชันสเปก
    </string>
    <string name="triple_ano_title">Smart Spying Prevention</string>
    <string name="triple_ano_small_title">智能防窥</string>
    <string name="triple_ano_content">Smart Spying Prevention ช่วยป้องกันการแจ้งเตือนหน้าจออัตโนมัติ และจะไม่ปรากฏข้อความ \nจนกว่าคุณจะเปิดในแบบส่วนตัว</string>
    <string name="triple_ano_remake">*ขั้นตอน:การตั้งค่า->การแจ้งเตือน &amp; แถบสถานะ ->จัดการการแจ้งเตือน\n->ป้องกันการแอบดู</string>
    <string name="hand_title">Smart AirControl</string>
    <string name="hand_title_small_title">手势操作</string>
    <string name="hand_title_content">ด้วยระบบ AI-Enhanced Smart Sensor การใช้ท่าทางมือแค่ใช้มือปัดขึ้นก็สามารถรับสายได้ แม้มือเปียก</string>
    <string name="hand_remake">*ขั้นตอน:การตั้งค่า->เครื่องมืออำนวยความสะดวก->ท่าทาง &amp; การเคลื่อนไหว\n->ฟังก์ชันการทำงานโดยไม่ต้องสัมผัสหน้าจอ</string>
    <string name="super_net_title">Snapdragon 720G</string>
    <string name="super_net_small_title">5G</string>
    <string name="super_net_content">เพลิดเพลินไปกับประสบการณ์ \nการเล่นเกมที่ลื่นไหลไม่ว่าเกมไหนก็เอาอยู่</string>
    <string name="super_net_remake">*เปรียบเทียบกับ Reno3</string>
    <string name="super_vooc_title">30W VOOC Flash Charge 4.0</string>
    <string name="super_vooc_title2">ระบบความปลอดภัย 5 ชั้น</string>
    <string name="super_vooc_small_title">超级闪充</string>
    <string name="super_vooc_content">30W VOOC Flash Charge 4.0 ซึ่งเป็นผู้นำอุตสาหกรรม ชาร์จ 1% ถึง 50% ใช้เวลาไม่เกิน 20 นาที</string>
    <string name="super_vooc_contentc_compare">30W VOOC Flash Charge 4.0 ซึ่งเป็นผู้นำอุตสาหกรรม ทำให้ชาร์จจาก 1% เป็น 50% \nใช้เวลาไม่เกิน 20 นาที</string>
    <string name="super_vooc_book">ระบบความปลอดภัย5ชั้นแบบพิเศษของ OPPO ได้รับการรับรองจากสถาบัน TÜV เรื่องระบบการชาร์จ\nอย่างรวดเร็วและปลอดภัย</string>
    <string name="super_vooc_title_compare_30w">5 นาที</string>
    <string name="super_vooc_title_compare_44w">15 นาที</string>
    <string name="super_vooc_title_compare_50w">เต็ม</string>
    <string name="super_vooc_content_compare_text_left_top">56</string>
    <string name="super_vooc_content_compare_text_right_top">72</string>
    <string name="super_vooc_content_compare_text_top_m">นาที</string>
    <string name="super_vooc_content_compare_text_left">30W</string>
    <string name="super_vooc_content_compare_text_left_next">VOOC Flash \nCharge 4.0</string>
    <string name="super_vooc_content_compare_text_right">20W</string>
    <string name="super_vooc_content_compare_text_right_next">VOOC Flash \nCharge 3.0</string>
    <string name="super_vooc_title_more_two_title_vooc1">การควบคุมพลังงานแบบเรียลไทม์</string>
    <string name="super_vooc_title_more_two_title_vooc2">การจัดการแบตเตอรี่อย่างเป็นอัจฉริยะ</string>
    <string name="super_vooc_title_more_two_title_vooc3">ชิปควบคุมสายเคเบิล</string>
    <string name="super_vooc_title_more_two_content_vooc3">(การรับรู้สภาพของ VOOC)</string>
    <string name="super_vooc_title_more_two_title_vooc4">ตรวจจับแรงดันไฟฟ้า + การตรวจสอบวงจร</string>
    <string name="super_vooc_title_more_two_title_vooc5">ควบคุมชิปอย่างเป็นอัจฉริยะ</string>
    <string name="big_memory_title">8GB+128GB</string>
    <string name="big_memory_small_title">8GB+128GB</string>
    <string name="big_memory_content">- มาพร้อมกับ Ram8GB ใช้งานได้อย่างลื่นไหล และหน่วยความจำ 128GB จัดเก็บข้อมูลเยอะจุใจ</string>
    <string name="big_memory_memory">128</string>
    <string name="big_memory_memory1">GB</string>
    <string name="big_memory_memory2">larger storage</string>
    <string name="big_memory_music">Music</string>
    <string name="big_memory_music_count">25000+</string>
    <string name="big_memory_photo">Photo</string>
    <string name="big_memory_photo_count">30000+</string>
    <string name="big_memory_video">Video</string>
    <string name="big_memory_video_count">250+</string>
    <string name="big_memory_app">App</string>
    <string name="big_memory_app_count">2500+</string>
    <string name="refresh_rate_title">Dual Punch-hole Display</string>
    <string name="refresh_rate_small_title">全面屏</string>
    <string name="refresh_rate_content">พื้นที่หน้าจอ 90.7% สีสันสดใสและได้รับการรับรองจาก TÜV ในเรื่องการตัดแสงสีฟ้า ทำให้การใช้งานบนหน้าจอได้ยาวนานขึ้นยิ่งขึ้น</string>
    <string name="phone_body_title">Ultra Slim Body</string>
    <string name="phone_body_small_title">轻薄机身</string>
    <string name="phone_body_content">บางเพียง 7.7mm. และ น้ำหนัก 165g. บางเบาจับถนัดมือ</string>
    <string name="phone_color_title">Galactic Blue</string>
    <string name="phone_color_small_title">颜色</string>
    <string name="phone_color_content">ผิวสัมผัสสุดพิเศษ ป้องกันรอยนิ้วมือ\nและมีความเปล่งประกายดุจเพชร</string>
    <string name="phone_color_content_blue">ผิวสัมผัสสุดพิเศษ ป้องกันรอยนิ้วมือ\nและมีความเปล่งประกายดุจเพชร</string>
    <string name="phone_color_content_black">สีดำให้ความสุขุมทรงพลังน่าค้นหาราวกับท้องฟ้า\nยามค่ำคืน และลวดลายที่มีเอกลักษณ์เฉพาะตัว</string>
    <string name="phone_color_Blue">Galactic Blue</string>
    <string name="phone_color_blue_content">ผิวสัมผัสสุดพิเศษ ป้องกันรอยนิ้วมือ\nและมีความเปล่งประกายดุจเพชร</string>
    <string name="phone_color_Black">Space Black</string>
    <string name="phone_color_Black_content">สีดำให้ความสุขุมทรงพลังน่าค้นหาราวกับท้องฟ้า\nยามค่ำคืน และลวดลายที่มีเอกลักษณ์เฉพาะตัว</string>
    <string name="phone_color_msg_tip">เลื่อนซ้ายหรือเลื่อนขวาเพื่อดูเพิ่มเติม</string>
    <string name="ai_portrait_title">AI Color Portrait</string>
    <string name="ai_portrait_small_title">AI人像留色</string>
    <string name="ai_portrait_content">โหมดถ่ายภาพและวีดีโอปรับแต่งด้วย AI สามารถเก็บสีบุคคลให้โดดเด่น และปรับสีฉากหลังให้เป็นขาวดำ</string>
    <string name="ai_portrait_title_por">AI Color Portrait(วีดีโอ)</string>
    <string name="ai_portrait_title_rgb">Monochrome Video</string>
    <string name="ai_portrait_title_rgb_content">วีดีโอเก็บสีแดง สีน้ำเงินและสีเขียวของบุคคลและวัตถุ และให้พื้นหลังเป็นสีขาวดำให้โดดเด่น\nและสวยเป็นธรรมชาติ</string>
    <string name="ai_portrait_title_photo">AI Color Portrait(ภาพถ่าย)</string>
    <string name="ai_portrait_title_photo_content">ถ่ายภาพเก็บสีสันสดใสของบุคคลให้โดดเด่น \nและให้พื้นหลังเป็นสีขาวดำ สวยเป็นธรรมชาติ</string>
    <string name="ai_photo_step1">แตะเพื่อเปิดตัวกรอง</string>
    <string name="ai_photo_step2">แตะเพื่อเปิด AI Color Portrait</string>
    <string name="ai_slow_motion_title">960fps AI Slow-motion</string>
    <string name="ai_slow_motion_small_title">智能高帧慢动作</string>
    <string name="main_performance">Performance</string>
    <string name="main_design">Design</string>
    <string name="main_video">Camera</string>
    <string name="main_experience">ColorOS 7.2</string>
    <string name="main_iot">IOT</string>
</resources>