<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.oppo.marketdemo.custom.ViewPagerIndicator
        android:id="@+id/dot_horizontal_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/indicator_mar_bottom"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.oppo.marketdemo.custom.textview.TypefaceTextView
        style="@style/compare_point_guadi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_tap_oppo"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.oppo.marketdemo.custom.textview.TypefaceTextView
        style="@style/compare_point_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_tap_other"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.oppo.marketdemo.custom.textview.TypefaceTextView
        android:id="@+id/bt_camera"
        android:gravity="center"
        android:drawableLeft="@mipmap/ic_camera_icon"
        style="@style/OnceButtonStyle"
        android:paddingLeft="46dp"
        android:paddingRight="33dp"
        android:paddingBottom="1dp"
        android:text="@string/bt_tap_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>