<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayE6F0F2"
    tools:context="com.oppo.marketdemo.MainActivity"
    tools:ignore="ContentDescription">


    <FrameLayout
        android:id="@+id/flayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_main_performance"
        android:clipChildren="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.oppo.marketdemo.custom.textview.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="15dp"
            android:text="@string/main_performance"
            android:textColor="@color/colorWhite"
            android:textSize="21sp"
            app:typeface_style="bold" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/flayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_main_exterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flayout">

        <com.oppo.marketdemo.custom.textview.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:text="@string/main_design"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:typeface_style="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_main_system"
        app:layout_constraintStart_toEndOf="@id/flayout2"
        app:layout_constraintTop_toBottomOf="@id/flayout">


        <com.oppo.marketdemo.custom.textview.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:text="@string/main_experience"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:typeface_style="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_mian_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flayout1">

        <com.oppo.marketdemo.custom.textview.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:text="@string/main_video"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:typeface_style="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_main_iot"
        app:layout_constraintStart_toEndOf="@id/flayout2"
        app:layout_constraintTop_toBottomOf="@id/flayout1">


        <com.oppo.marketdemo.custom.textview.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_marginTop="14dp"
            android:text="@string/main_iot"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:typeface_style="bold" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>